2005-03-04  Per Bothner  <per@bothner.com>

	* ReplMode.java: Update Interpreter->Lanuguage various places.

2005-02-25  Per Bothner  <per@bothner.com>

	* emacs.scm (global-map, esc-map): Define using define-variable.

2005-01-07  Per Bothner  <per@bothner.com>

	* Buffer. java (getStringContent): New abstract (uncommented) method.
	(charAt, setCharAt, fill, writeTo, consume): New CharSeq methods,
	implemented using getStringContent.

2004-12-29  Per Bothner  <per@bothner.com>

	* BufferLocal.java (make): Set base field.
	(isBound, get, set): Make robust in case there is no current Buffer.

2004-12-05  Per Bothner  <per@bothner.com>

	* BufferLocalConstraint.java: Remove class, replaced by:
	* BufferLocal.java: New class, extends IndirectableLocation.
	* Makefile.am: Update accordingly.
	* Buffer.java (localBindings): New field.
	(makeBufferLocal): Update to use new BufferLocal class.
	* Command.java (resolveSymbol): Update for new Environment handling.
	* EKeymap.java (keySymbol): New access method, required because
	it was added to the Named interface.

2004-08-23  Per Bothner  <per@bothner.com>

	* EToolkit.java	(swingToolkit, swtToolkit):  New constants.
	(getInstance):  Get gnu.jemacs.toolkit property to select toolkit.

2004-08-04  Christian Surlykke <christian@surlykke.dk>

	* Buffer.java (invoke): New abstract method 
	* EFrame.java (setMenuBar): Removed. Use setMenu instead
	(setMenu): New abstract method
	* EToolkit.java (getIgnoreAction): New abstract method. 
	(getMenu): New abstract method.
	(getIgnoreAction): New abstract method.
	
	* emacs.scm (set-menubar-dirty-flag): changed to use EFrame.setMenu
	rather than EFrame.setMenuBar
	(scheme-swing-window): Renamed to (scheme-window)
	* EMenu.java: New abstract class
	* EWindow.java (setSelected): Changed to concrete, moved some
	non-swing-specific code from SwingWindow.setSelected to here.
	(tooLong): New abstract method.
	(lookupKey): Uses that rather than explicitly creating TooLongAction.